[package]
name = "dashpr"
version = "0.1.0"
authors = ["Daniel Fujii <danifujii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "bf9de1d39e0b33c0172f89f98a43e266e9ae5bd7" }
